[19/11/2010]
- SpellEffect/Fight : Correction des invocations "Mal ciblables".

[18/11/2010]
- IA : Correction de quelques bug de passage de tour.
- Fight : Correction d'un bug de fin de combat avec les doubles.
- Commands : Correction de la commande BANIP et SPAWN.
- World : Correction de ipIsUsed et de la variable ALLOW_MULTI_ACCOUNT.

[17/11/2010]
- RealmThread : Correction d'un bug qui permettait de se connecter a deux sur un compte en même temps.
- RealmThread/RealmServer/Pending : Ajout d'un systeme de file d'attente.
- World : Correction de l'UP guilde des niveaux 100 à 199.
- Commands : Ajout de la commande BANIP args : [Nom du joueur]
BANIP Death
(Patch 93 a appliquer)

[16/11/2010]
- GameThread/SocketManager/CryptManager : Ajout des conversion UTF/UNICODE (THX MARTHIEUBEAN).
- Guild : Correction des champs sorts/Stats lors de la création d'une guilde (THX rapha-35).
- BDD : Débug de la bloqueuse et de l'arbre.
(Patch 92 a appliquer)

[12/11/2010]
- GameThread : Correction de la commande TOOGLEAGGRO.
- Compte/World : Correction de la supression des personnages.

[11/11/2010]
- Commands : Ajout de la commande BLOCK args : [GMLevel] [KickPlayer]
BLOCK 4 1 : Kick et bloque le serveur aux joueurs inférieur au GmLevel 4.
BLOCK 3 1 : Kick et bloque le serveur aux joueurs inférieur au GmLevel 3.

[09/11/2010]
- GameThread : Ajout de la limitation des pods.
- World :  Amélioration de la fonction getNewItemGuid() (évite les ConcurrentModificationException).
- World : La déconnection des personnages entraine le déchargement de leurs items.
- GameThread : Correction d'un faille dans les échanges (THX MARTHIEUBEAN).

[08/11/2010]
- Config : Ajout de la constante MAX_IDLE_TIME en minutes.
- Personnage/GameServer/Ancestra : Les joueurs innactifs sont kick automatiquement après MAX_IDLE_TIME minutes.

[07/11/2010]
- Constants : Retrait de la fonction NO_MOBS_MAP, pour ne pas mettre de mobs sur une map il faut mettre la colone numgroup dans maps a 0 (THX nami-doc).